# libretiny

./: .clang-format  .gitignore  .gitmodules  404.html  LICENSE  README.md  SUMMARY.md  TODO.md  boards.json  descript.ion  external-libs.json  external-libs.schema.json  families.json  families.schema.json  index.html  mkdocs.yml  platform.json  platform.py  sitemap.xml  uf2families.json
.github/: FUNDING.yml
SUMMARY/: index.html
arduino/: descript.ion
boards/: SUMMARY.md  afw121t.json  bw12.json  bw15.json  cb1s.json  cb2l.json  cb2s.json  cb3l.json  cb3s.json  cb3se.json  cblc5.json  cbu.json  cr3l.json  generic-bk7231n-qfn32-tuya.json  generic-bk7231n-qfn32.json  generic-bk7231t-qfn32-tuya.json  generic-bk7238-tuya.json  generic-bk7238.json  generic-bk7252.json  generic-ln882h-tuya.json  generic-ln882h.json  generic-ln882hki-tuya.json  generic-ln882hki.json  generic-native.json  generic-rtl8710bn-2mb-468k.json  generic-rtl8710bn-2mb-788k.json  generic-rtl8710bx-4mb-980k.json  generic-rtl8720cf-2mb-896k.json  generic-rtl8720cf-2mb-992k.json  generic-rtl8720cm-4mb-1712k.json  ln-02.json  ln-cb3s-v1.0.json  lsc-lma35-t.json  lsc-lma35.json  t1-2s.json  t1-3s.json  t1-m.json  t1-u.json  t102-v1.1.json  t103-v1.0.json  (+30 more)
builder/: arduino-api.py  arduino-common.py  main.py  python-venv.py  uf2.py  utils.py
docs/: API Configuration.md  CNAME  README.md  TODO.md  boards_tuya_all.json  cloudcutter.md  config.md  families.md  families.py  flashing-uf2ota.md  (+19 more)
tools/uf2ota/: .gitignore  dump.py  models.py  pyproject.toml  uf2.py  uf2_block.py  uf2ota.py  utils.py
(+2079 files in other folders)
